refactor: :recycle: Rename stats to abilities

--- a/lang/en.json
+++ b/lang/en.json
@@ -5,32 +5,6 @@
         "long": "Strength",
         "abbr": "str"
       },
-      "Con": {
-        "long": "Constitution",
-        "abbr": "con"
-      },
-      "Dex": {
-        "long": "Dexterity",
-        "abbr": "dex"
-      },
-      "Int": {
-        "long": "Intelligence",
-        "abbr": "int"
-      },
-      "Wis": {
-        "long": "Wisdom",
-        "abbr": "wis"
-      },
-      "Cha": {
-        "long": "Charisma",
-        "abbr": "cha"
-      }
-    },
-    "Stat": {
-      "Str": {
-        "long": "Strength",
-        "abbr": "str"
-      },
       "End": {
         "long": "Endurance",
         "abbr": "end"
@@ -99,8 +73,8 @@
           "skills": {
             "label": "Skills"
           },
-          "stats": {
-            "label": "Stats"
+          "abilities": {
+            "label": "Abilities"
           },
           "fatigue": {
             "label": "Fatigue"
