refactor: :recycle: Refactor UVG 1e skills to SDM attacks

--- a/lang/en.json
+++ b/lang/en.json
@@ -83,7 +83,8 @@
             "label": "Skills"
           },
           "abilities": {
-            "label": "Abilities"
+            "label": "Ability",
+            "labelPl": "Abilities"
           },
           "friends": {
             "label": "Friends"
