--- a/lang/en.json
+++ b/lang/en.json
@@ -152,7 +152,9 @@
   "SDM.ErrorTransferExcessCashAmount": "Cannot transfer more cash than available",
   "SDM.DeleteDocConfirmation": "Delete {doc} permanently?",
   "SDM.SettingsInitiativeFormula": "Initiative Formula",
-  "SDM.SettingsInitiativeFormulaHint": "",
+  "SDM.SettingsInitiativeFormulaHint": "Default initiative formula for characters",
+  "SDM.SettingsNPCInitiativeFormula": "NPC Initiative Formula",
+  "SDM.SettingsNPCInitiativeFormulaHint": "Default initiative formula for NPCs",
   "SDM.SettingsCurrencyName": "Currency name",
   "SDM.SettingsCurrencyNameHint": "The primary currency used in the game world",
   "SDM.SettingsEscalatorDie": "Escalator Die",
@@ -173,6 +175,26 @@
   "SDM.SettingsBaseNPCMorabelHint": "Base number for NPCs morale value",
   "SDM.SettingsHealingHouseRule": "Healing House Rule",
   "SDM.SettingsHealingHouseRuleHint": "Allows for rolling healing hero dice with advantage (roll twice and keep the highest result)",
+  "SDM.SettingsInvalidChange": "Invalid {settings}, reverting to default value",
+  "SDM.EFFECT.ChangeProperty": "Property",
+  "SDM.EffectsLabel.system.initiative_bonus": "Initiative bonus",
+  "SDM.EffectsLabel.system.defense_bonus": "Physical defense bonus",
+  "SDM.EffectsLabel.system.mental_defense_bonus": "Mental defense bonus",
+  "SDM.EffectsLabel.system.social_defense_bonus": "Social defense bonus",
+  "SDM.EffectsLabel.system.ward": "Ward bonus (affects mental defense and all saving throw rolls)",
+  "SDM.EffectsLabel.system.prestige": "Prestige bonus (social defense)",
+  "SDM.EffectsLabel.system.trait_slots_bonus": "Extra trait slots",
+  "SDM.EffectsLabel.system.item_slots_bonus": "Extra item slots",
+  "SDM.EffectsLabel.system.small_item_slots_bonus": "Number of extra item slots for small sized (sp) items",
+  "SDM.EffectsLabel.system.packed_item_slots_bonus": "Number of extra item slots for packade items (not readied items)",
+  "SDM.EffectsLabel.system.burden_slots_bonus": "Extra burden slots",
+  "SDM.EffectsLabel.system.hero_dice.bonus": "Extra hero dice (increases the max number of hero dice)",
+  "SDM.EffectsLabel.system.hero_dice.dice_type": "Hero dice type, override with: (d4, d6, d8, d10, d12 or d20)",
+  "SDM.EffectsLabel.system.reaction_bonus": "",
+  "SDM.EffectsLabel.system.save_target": "",
+  "SDM.EffectsLabel.system.life.bonus": "",
+  "SDM.EffectsLabel.system.melee.bonus": "",
+  "SDM.EffectsLabel.system.oldtech.bonus": "",
   "TYPES.Actor.caravan": "Caravan",
   "TYPES.Actor.character": "Character",
   "TYPES.Actor.npc": "NPC",
