refactor: :recycle: Refactor i18n in all macros and utility functions

--- a/lang/en.json
+++ b/lang/en.json
@@ -101,6 +101,8 @@
   "SDM.HeroDiceSpend": "{actor} spent {quantity} {diceLabel}",
   "SDM.HeroDie": "hero die",
   "SDM.HeroDice": "hero dice",
+  "SDM.ManageHeroDice": "Adjust Hero Dice",
+  "SDM.UpdatedHeroDice": "Updated hero dice for {number} character(s)!",
   "SDM.SpeedVerySlow": "Very Slow",
   "SDM.SpeedSlow": "Slow",
   "SDM.SpeedStandard": "Standard",
@@ -108,11 +110,14 @@
   "SDM.SpeedVeryFast": "Very Fast",
   "SDM.EscalatorDie": "Escalator Die",
   "SDM.EscalatorDieControl": "Escalator Die Control",
-  "SDM.EscalatorIncrement": "Increase by 1",
-  "SDM.EscalatorReset": "Reset to 0",
-  "SDM.EscalatorHint": "Current bonus: +{value}",
+  "SDM.EscalatorDieIncreased": "Escalator Die increased to {value}",
+  "SDM.EscalatorDieReset": "Escalator Die reset to 0",
+  "SDM.Increment": "Increase by 1",
+  "SDM.Reset": "Reset to 0",
+  "SDM.EscalatorDieHint": "Current bonus: +{value}",
   "SDM.HealingHouseRule": "Roll {dice}x2, keep highest",
   "SDM.AbilityScoreGen": "Roll Ability Scores",
+  "SDM.Amount": "Amount",
   "SDM.ButtonYes": "Yes",
   "SDM.ButtonNo": "No",
   "SDM.ButtonCancel": "Cancel",
@@ -125,12 +130,24 @@
   "SDM.MessageRolling": "Rolling",
   "SDM.MessageDamage": "Deals {damage} damage!",
   "SDM.MessageCritical": "Critical hit!",
+  "SDM.MessageNoChanges": "No changes were needed",
   "SDM.Transfer": "Transfer {type}",
+  "SDM.TransferTo": "To",
+  "SDM.Target": "Target",
   "SDM.TransferCashComplete": "Transferred {amount} cash to {target}",
   "SDM.TransferItemComplete": "{item} transferred to {target}",
+  "SDM.TransferFailed": "Transfer failed: {error}",
   "SDM.Roll.Title": "{prefix}Roll: {title}",
+  "SDM.SelectCharacter": "Select Character",
   "SDM.AllCharacters": "All Characters",
   "SDM.CashManagement": "Cash Management",
+  "SDM.CashManagementAddMoney": "Give Money",
+  "SDM.CashManagementRemoveMoney": "Charge Money",
+  "SDM.CashManagementCompleted": "Cash transfer successful for {number} character(s)!",
+  "SDM.ExperienceDistribution": "XP Distribution",
+  "SDM.XPToGive": "XP to Give",
+  "SDM.DistributeXP": "Distribute XP",
+  "SDM.ExperienceDistributionCompleted": "Distributed {xp} XP to {number} character(s)!",
   "SDM.SavingThrowSacrifice": "SACRIFICE",
   "SDM.SavingThrowSacrificeMessage": "Lose something precious to save.",
   "SDM.SavingThrowSave": "SAVE",
@@ -138,18 +155,24 @@
   "SDM.SavingThrowDoom": "DOOM",
   "SDM.SavingThrowDoomMessage": "What was, will be. No save.",
   "SDM.ErrorValidationRollFormula": "must be a valid roll formula",
-  "SDM.ErrorNoActorSelected": "No valid actor was selected!",
+  "SDM.ErrorNoActorSelected": "No valid {type} was selected!",
   "SDM.ErrorNoHeroDice": "No Hero Dice available!",
   "SDM.ErrorActorNoHeroDice": "{actor} has no hero dice available for this roll!",
   "SDM.ErrorInvalidModifier": "Invalid roll modifier",
   "SDM.ErrorMissingDamageFormula": "Item doesn't have configured damage roll formula",
   "SDM.ErrorInvalidTarget": "Invalid target actor",
+  "SDM.ErrorInvalidDiceFaces": "Invalid number of faces for a die: {faces}",
   "SDM.ErrorTransferItemNotAvailable": "Item is no longer available for transfer",
   "SDM.ErrorTransferInvalidItemState": "Item state changed during transfer",
+  "SDM.ErrorTransferAlreadyInProgress": "Item {name} is already being transferred",
   "SDM.ErrorTransferSessionExperied": "Transfer session expired",
   "SDM.ErrorTransferTargetHasItem": "Target actor already has this item",
-  "SDM.ErrorTransferAmoutNotPositive": "Amount must be a positive number",
+  "SDM.ErrorTransferAmountNotPositive": "Amount must be a positive number",
   "SDM.ErrorTransferExcessCashAmount": "Cannot transfer more cash than available",
+  "SDM.ErrorNoMoney": "{target} doesn't have any money!",
+  "SDM.ErrorNotEnoughMoney": "{target} doesn't have enough money!",
+  "SDM.ErrorCashManagementFailed": "An error has happened during cash transfer!",
+  "SDM.ErrorUpdateDoc": "Error updating {doc}",
   "SDM.DeleteDocConfirmation": "Delete {doc} permanently?",
   "SDM.SettingsInitiativeFormula": "Initiative Formula",
   "SDM.SettingsInitiativeFormulaHint": "Default initiative formula for characters",
@@ -173,6 +196,8 @@
   "SDM.SettingsBaseBurdenSlotsHint": "Base number of burden slots for a character",
   "SDM.SettingsBaseNPCMorabel": "NPC Base Morale",
   "SDM.SettingsBaseNPCMorabelHint": "Base number for NPCs morale value",
+  "SDM.SettingsSavingThrowBaseRollFormula": "Base saving throw roll formula",
+  "SDM.SettingsSavingThrowBaseRollFormulaHint": "Base roll formula for all saving throw rolls",
   "SDM.SettingsHealingHouseRule": "Healing House Rule",
   "SDM.SettingsHealingHouseRuleHint": "Allows for rolling healing hero dice with advantage (roll twice and keep the highest result)",
   "SDM.SettingsInvalidChange": "Invalid {settings}, reverting to default value",
@@ -195,6 +220,7 @@
   "SDM.EffectsLabel.system.life.bonus": "",
   "SDM.EffectsLabel.system.melee.bonus": "",
   "SDM.EffectsLabel.system.oldtech.bonus": "",
+  "SDM.CombatantsExcluded": "Excluded from combat: {names}",
   "TYPES.Actor.caravan": "Caravan",
   "TYPES.Actor.character": "Character",
   "TYPES.Actor.npc": "NPC",
@@ -206,5 +232,5 @@
   "TYPES.Item.spell": "Spell",
   "TYPES.Item.motor": "Motor",
   "TYPES.Item.weapon": "Weapon",
-  "TYPES.Item": "Item"
+  "TYPE.Item": "Item"
 }
