refactor: :recycle: Add revenue expenses wealth and dept to character sheet

--- a/lang/en.json
+++ b/lang/en.json
@@ -23,14 +23,15 @@
   "SDM.InventoryTraits": "Traits",
   "SDM.InventoryBurdens": "Burdens",
   "SDM.TabEffects": "Effects",
-  "SDM.FieldAbilities": "Ability",
+  "SDM.FieldAbility": "Ability",
   "SDM.FieldAbilitiesPl": "Abilities",
   "SDM.FieldArmor": "Armor",
   "SDM.FieldBiography": "Biography",
   "SDM.FieldBonus": "Bonus",
-  "SDM.FieldCharXP": "Character XP",
+  "SDM.FieldCharXP": "PC xp",
+  "SDM.FieldCharXPTitle": "Character Experience",
   "SDM.FieldDefense": "Defense",
-  "SDM.FieldEnemies": "Enemies",
+  "SDM.FieldFoes": "Foes",
   "SDM.FieldFatigue": "Fatigue",
   "SDM.FieldFriends": "Friends",
   "SDM.FieldHeroDice": "Hero Dice",
@@ -40,10 +41,15 @@
   "SDM.FieldLikes": "Likes",
   "SDM.FieldLooks": "Looks",
   "SDM.FieldName": "Name",
-  "SDM.FieldPlayerXP": "Player XP",
+  "SDM.FieldPlayerXP": "Player xp",
+  "SDM.FieldPlayerXPTitle": "Player Experience",
   "SDM.FieldSaveTarget": "Save",
   "SDM.FieldSkills": "Skills",
   "SDM.FieldSpecies": "Species",
+  "SDM.FieldRevenue": "Revenue",
+  "SDM.FieldExpense": "Expenses",
+  "SDM.FieldWealth": "Wealth",
+  "SDM.FieldDebt": "Debt",
   "SDM.SkillExpertise": "Expertise",
   "SDM.NpcCr": "CR",
   "SDM.NpcXp": "XP",
@@ -92,6 +98,7 @@
   "SDM.RollDisadvantage": "disadvantage",
   "SDM.RollDisadvantageAbbr": "↓d",
   "SDM.RollModifier": "Modifier",
+  "SDM.RollMultiplier": "Multiplier",
   "SDM.RollModifiers": "Modifiers",
   "SDM.RollExplosion": "Explosion",
   "SDM.RollDiceTotal": "Dice Total",
@@ -115,9 +122,12 @@
   "SDM.Increment": "Increase by 1",
   "SDM.Reset": "Reset to 0",
   "SDM.EscalatorDieHint": "Current bonus: +{value}",
-  "SDM.HealingHouseRule": "Roll {dice}x2, keep highest",
+  "SDM.HealingHouseRule": "Healing House Rule",
+  "SDM.HealingHouseRuleHint": "",
   "SDM.AbilityScoreGen": "Roll Ability Scores",
   "SDM.Amount": "Amount",
+  "SDM.Attack": "Attack",
+  "SDM.Skill": "Skill",
   "SDM.ButtonYes": "Yes",
   "SDM.ButtonNo": "No",
   "SDM.ButtonCancel": "Cancel",
@@ -127,6 +137,7 @@
   "SDM.ButtonDelete": "Delete",
   "SDM.ButtonApply": "Apply",
   "SDM.ButtonSave": "Save Changes",
+  "SDM.Damage": "Damage",
   "SDM.MessageRolling": "Rolling",
   "SDM.MessageDamage": "Deals {damage} damage!",
   "SDM.MessageCritical": "Critical hit!",
@@ -137,7 +148,7 @@
   "SDM.TransferCashComplete": "Transferred {amount} cash to {target}",
   "SDM.TransferItemComplete": "{item} transferred to {target}",
   "SDM.TransferFailed": "Transfer failed: {error}",
-  "SDM.Roll.Title": "{prefix}Roll: {title}",
+  "SDM.RollTitle": "{prefix}Roll: {title}",
   "SDM.SelectCharacter": "Select Character",
   "SDM.AllCharacters": "All Characters",
   "SDM.CashManagement": "Cash Management",
@@ -199,7 +210,7 @@
   "SDM.SettingsSavingThrowBaseRollFormula": "Base saving throw roll formula",
   "SDM.SettingsSavingThrowBaseRollFormulaHint": "Base roll formula for all saving throw rolls",
   "SDM.SettingsHealingHouseRule": "Healing House Rule",
-  "SDM.SettingsHealingHouseRuleHint": "Allows for rolling healing hero dice with advantage (roll twice and keep the highest result)",
+  "SDM.SettingsHealingHouseRuleHint": "Roll hero dice twice and keep the highest result",
   "SDM.SettingsInvalidChange": "Invalid {settings}, reverting to default value",
   "SDM.EFFECT.ChangeProperty": "Property",
   "SDM.EffectsLabel.system.initiative_bonus": "Initiative bonus",
@@ -220,6 +231,7 @@
   "SDM.EffectsLabel.system.life.bonus": "",
   "SDM.EffectsLabel.system.melee.bonus": "",
   "SDM.EffectsLabel.system.oldtech.bonus": "",
+  "SDM.ExplodingDice": "Exploding Dice",
   "SDM.CombatantsExcluded": "Excluded from combat: {names}",
   "TYPES.Actor.caravan": "Caravan",
   "TYPES.Actor.character": "Character",
