feat: :sparkles: Add more missing i18n strings and add brazilian portuguese (pt-BR) translation file

--- a/lang/en.json
+++ b/lang/en.json
@@ -11,10 +11,15 @@
   "SDM.AbilityAurAbbr": "aur",
   "SDM.AbilityTho": "Thought",
   "SDM.AbilityThoAbbr": "tho",
+  "SDM.AbilityFull": "Full {ability}",
+  "SDM.AbilityCurrent": "Current {ability}",
   "SDM.AttackMelee": "Melee",
   "SDM.AttackRanged": "Ranged",
   "SDM.AttackOldtech": "Oldtech",
   "SDM.AttackFantascience": "Fantascience",
+  "SDM.Magitech": "Magitech",
+  "SDM.Psychemagic": "Psychemagic",
+  "SDM.BiomagicalCorruption": "Biomagical Corruption",
   "SDM.SheetActor": "SDM Actor Sheet",
   "SDM.SheetItem": "SDM Item Sheet",
   "SDM.TabBiography": "Biography",
@@ -31,6 +36,9 @@
   "SDM.FieldCharXP": "PC xp",
   "SDM.FieldCharXPTitle": "Character Experience",
   "SDM.FieldDefense": "Defense",
+  "SDM.FieldPhysicalDefense": "Physical Defense",
+  "SDM.FieldMentalDefense": "Mental Defense",
+  "SDM.FieldSocialDefense": "Social Defense",
   "SDM.FieldFoes": "Foes",
   "SDM.FieldFatigue": "Fatigue",
   "SDM.FieldFriends": "Friends",
@@ -233,16 +241,20 @@
   "SDM.EffectsLabel.system.oldtech.bonus": "",
   "SDM.ExplodingDice": "Exploding Dice",
   "SDM.CombatantsExcluded": "Excluded from combat: {names}",
+  "DOCUMENT.New": "New {type}",
+  "DOCUMENT.Create": "Create {type}",
   "TYPES.Actor.caravan": "Caravan",
   "TYPES.Actor.character": "Character",
   "TYPES.Actor.npc": "NPC",
   "TYPES.Item.armor": "Armor",
   "TYPES.Item.burden": "Burden",
   "TYPES.Item.trait": "Trait",
-  "TYPES.Item.gear": "Gear",
+  "TYPES.Item.gear": "Item",
   "TYPES.Item.mount": "Mount",
   "TYPES.Item.spell": "Spell",
   "TYPES.Item.motor": "Motor",
   "TYPES.Item.weapon": "Weapon",
-  "TYPE.Item": "Item"
+  "TYPE.Item": "Item",
+  "TYPE.Trait": "Trait",
+  "TYPE.Burden": "Burden"
 }
