feat: :sparkles: Add a new notes tab to actors, change the way we mark dice as exploding

--- a/lang/en.json
+++ b/lang/en.json
@@ -23,6 +23,7 @@
   "SDM.SheetActor": "SDM Actor Sheet",
   "SDM.SheetItem": "SDM Item Sheet",
   "SDM.TabBiography": "Biography",
+  "SDM.TabNotes": "Notes",
   "SDM.TabInventory": "Inventory",
   "SDM.InventoryItems": "Items",
   "SDM.InventoryTraits": "Traits",
@@ -55,7 +56,7 @@
   "SDM.FieldSkills": "Skills",
   "SDM.FieldSpecies": "Species",
   "SDM.FieldRevenue": "Revenue",
-  "SDM.FieldExpense": "Expenses",
+  "SDM.FieldExpense": "Expense",
   "SDM.FieldWealth": "Wealth",
   "SDM.FieldDebt": "Debt",
   "SDM.SkillExpertise": "Expertise",
@@ -112,7 +113,7 @@
   "SDM.RollDiceTotal": "Dice Total",
   "SDM.RollType": "Roll Type",
   "SDM.RollUseHeroDice": "Use Hero Dice",
-  "SDM.SavingThrowRoll": "{ability} Saving Throw Roll",
+  "SDM.SavingThrowRoll": "{ability} Saving Throw",
   "SDM.HeroDiceSpend": "{actor} spent {quantity} {diceLabel}",
   "SDM.HeroDie": "hero die",
   "SDM.HeroDice": "hero dice",
