--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -23,6 +23,7 @@
   "SDM.SheetActor": "Ficha de Ator SDM",
   "SDM.SheetItem": "Ficha de Item SDM",
   "SDM.TabBiography": "Biografia",
+  "SDM.TabNotes": "Anotações",
   "SDM.TabInventory": "Inventário",
   "SDM.InventoryItems": "Itens",
   "SDM.InventoryTraits": "Traços",
